.kubernetes/hyvesdp-eks/nofunds-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nofunds-production
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: kubelet.kubernetes.io/role=production
  labels:
    certmanager.k8s.io/disable-validation: "true"
