.kubernetes/hyvesdp-eks/nofunds-production/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cellc-nofunds-dashboard
  name: cellc-nofunds-dashboard
  namespace: nofunds-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cellc-nofunds-dashboard
  template:
    metadata:
      labels:
        app: cellc-nofunds-dashboard
    spec:
      volumes:
        - name: app-data
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - image: nginx:alpine
          name: app
          imagePullPolicy: IfNotPresent
          ports:
            - name: ondash-fe-www
              containerPort: 80
#           - name: ondash-fe-ssl
#             containerPort: 443
          volumeMounts:
            - name: app-data
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
